# TaskAlert

./: README.md  pyproject.toml
src/taskalert/: __init__.py
src/taskalert/backend/: alembic.ini  crud.py  database.py  main.py  models.py  schemas.py
src/taskalert/backend/alembic/: env.py
src/taskalert/backend/alembic/versions/: 4adad9ceb1e6_initial_migration.py
src/taskalert/frontend/: __init__.py  streamlit_app.py
