[project]
name = "taskalert"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "SamuelMosesA", email = "asamuelmoses@outlook.com" }
]
dependencies = [
    "fastapi>=0.115.8",
    "uvicorn>=0.34.0",
    "pydantic>=2.10.6",
    "sqlalchemy>=2.0.38",
    "psycopg2-binary>=2.9.10",
    "alembic>=1.14.1",
    "requests>=2.32.3",
    "streamlit>=1.42.1",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/taskalert"]
